# singing-trombone

./: .gitignore  CMakeLists.txt  README.md
Source/: LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
Source/core/: List.h  Queue.h
Source/engine/: Engine.cpp  Engine.h  Envelope.cpp  Envelope.h  Interpolator.cpp  Interpolator.h  Lyrics.cpp  Lyrics.h  Parameter.cpp  Parameter.h  Voice.cpp  Voice.h
Source/model/: Glottis.cpp  Glottis.h  Noise.cpp  Noise.h  Tract.cpp  Tract.h  VoiceProcessor.cpp  VoiceProcessor.h
